--- a/details.html
+++ b/details.html
@@ -5,6 +5,17 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="all-entries.html">Send-IT</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="all-entry.html">All Orders</a></li>
+            <li><a href="create.html">Create Order</a></li>
+            <li><a href="index.html">Logout</a></li>
+        </ul>
+    </nav>
+    
   <h2>Parcel Details</h2>
   <div id="parcel-details"></div>
   <button onclick="cancelOrder()">Cancel Order</button>
