--- a/order-details.html
+++ b/order-details.html
@@ -1,4 +1,4 @@
-<!-- order-details.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <nav class="navbar">
+    <div class="logo">
+        <a href="all-entries.html">Send-IT</a>
+    </div>
+    <ul class="nav-links">
+        <li><a href="all-entry.html">All Orders</a></li>
+        <li><a href="create.html">Create Order</a></li>
+        <li><a href="index.html">Logout</a></li>
+    </ul>
+</nav>
+  
     <div class="details-container">
         <h2>Order Details</h2>
         <p>Order ID: 12345</p>
